--- a/lander/ar_offer_zoin/form_only/css/style.css
+++ b/lander/ar_offer_zoin/form_only/css/style.css
@@ -1,31 +1,16 @@
 .register_form input,.iti,button[type='submit']{
     width: 100%;
     display: block;
-    margin-top: 7px;
+    margin-top: 5px;
     outline: none;
 }
 
 
 .register_form input {
     /*height: 42px;*/
-    border: 1px solid rgb(180, 179, 179);
-    border-radius: 5px;
-}
-
-.register_form input::placeholder {
-    color: #757575;
-}
-
-.invest_250,
-.register_form label {
-    color: #373737;
-    font-size: 13px;
-}
-
-.register_form label,
-.register_form input:not(#phone) {
-    text-align: right;
-    display: block;
+    border-color: #A4A7AE;
+    border-width: 1px 1px 1px 1px;
+    border-radius: 5px 5px 5px 5px;
 }
 
 .register_form  .errors{
@@ -37,25 +22,26 @@
 }
 
 .register_form .submit_button{
-    height: 56px;
+    height: 57px;
     border: 0;
     cursor: pointer;
-    transition: all 0.3s ease 0s;
+    transition: all .3s;
     font-size: 20px;
     text-transform: uppercase;
-    background-color: rgb(116,4,244);
+    background: red;
     color: #FFFFFF ;
     font-family: "Tajawal", Sans-serif;
     font-weight: 600;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 8px 8px 8px 8px;
+    box-shadow: 0px 4px 9px rgba(0,0,0,0.25);
     line-height: 1.5;
     padding: 8px 16px;
     margin: 15px auto;
 }
 
 .register_form .submit_button:hover {
-    transform: scale(1.07);
+    transform: scale(1.08);
 }
 
 
