--- a/lander/ar_offer_Kipco/form_only/css/style.css
+++ b/lander/ar_offer_Kipco/form_only/css/style.css
@@ -1,62 +1,47 @@
 .register_form input,.iti,button[type='submit']{
-  width: 100%;
-  display: block;
-  margin-top: 5px;
-  outline: none;
+    width: 100%;
+    display: block;
+    margin-top: 5px;
+    outline: none;
 }
+
+
 .register_form input {
-  width: 100%;
-  height: 2.5rem;
-  border: 1px solid #ccc;
-  font-size: 1rem;
-  border-radius: 5px;
-  box-sizing: border-box;
+    /*height: 42px;*/
+    border-color: #A4A7AE;
+    border-width: 1px 1px 1px 1px;
+    border-radius: 5px 5px 5px 5px;
 }
-.form-label{
-  display: none;
-}
+
 .register_form  .errors{
-  background: #c38188;
-  text-align: center;
-  color: black;
-  margin: 10px;
-  padding: 5px;
+    background: #c38188;
+    text-align: center;
+    color: black;
+    margin: 10px;
+    padding: 5px;
 }
-.register_form {
-  max-width: 600px!important;
-  margin: 0 auto;
-  display: block;
+
+.register_form .submit_button{
+    height: 57px;
+    border: 0;
+    cursor: pointer;
+    transition: all .3s;
+    font-size: 20px;
+    text-transform: uppercase;
+    background: red;
+    color: #FFFFFF ;
+    font-family: "Tajawal", Sans-serif;
+    font-weight: 600;
+    width: 100%;
+    border-radius: 8px 8px 8px 8px;
+    box-shadow: 0px 4px 9px rgba(0,0,0,0.25);
+    line-height: 1.5;
+    padding: 8px 16px;
+    margin: 15px auto;
 }
-.register_form .submit_button {
-	margin: 0 auto;
-	padding: 0.7rem 1.4rem;
-	border: 0;
-	font-size: 1.2rem;
-	line-height: 1;
-	text-align: center;
-	background-color:rgb(27, 40, 114);
-	color: #fff;
-	cursor: pointer;
-	height: 60px;
-	transition: transform .2s ease-in-out;
-	font-weight: 900;
-  border-radius: 5px;
-}
-.invest_250{
-  color: #fff;
-}
+
 .register_form .submit_button:hover {
-  transform: scale(1.08);
+    transform: scale(1.08);
 }
 
-.iti--allow-dropdown input[type="tel"], .iti--separate-dial-code input {
-padding-left: 86px !important;
-}
 
-.iti__country-list{
-  color: #000!important;
-}
-::placeholder {
-color: #000;
-opacity: 1;
-}
