--- a/lander/pt_offer_Petrobras-noquestion/form_only/css/style.css
+++ b/lander/pt_offer_Petrobras-noquestion/form_only/css/style.css
@@ -7,12 +7,10 @@
 
 
 .register_form input {
-    border-radius: 4px;
-  font-size: 14px;
-  height: 45px;
-  line-height: 1.5;
-  min-width: 243px;
-  padding-left: 15px;
+    /*height: 42px;*/
+    border-color: #A4A7AE;
+    border-width: 1px 1px 1px 1px;
+    border-radius: 5px 5px 5px 5px;
 }
 
 .register_form  .errors{
@@ -49,15 +47,13 @@
 
 
 
+
 .form-label  {
-  display: none;
+    display: none;
 }
 
 .register_form .mb-3 {
-  margin-bottom: 11px;
+    margin-bottom: 11px;
 }
 
 
-#phone {
-  padding-left: 92px !important;
-}
